# weather-regulation-prediction

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint  BALANCED_DATASET_PROCEDURE.md  CLAUDE.md  DEEP_LEARNING_RESULTS_SUMMARY.md  README.md  REFACTORING_PLAN.md  REORGANIZATION_SUMMARY.md  config.py  config_parser.py  config_utils.py  convert_regulation_data.py  example_training_pipeline.py  example_usage.py  filter_TAFs.py  functions.py  install_cuda_wsl.sh  install_cudnn.bat  model.py  plots.py  pyproject.toml  run_experiments.py  run_simple_experiment.py  test_training_pipeline.py
configs/: balanced_deep_learning.yaml  balanced_experiment.yaml  cpu_only.yaml  default_config.yaml  example_config.yaml  example_suite.yaml  experiment1.yaml  lstm_tuning.yaml  minimal_suite.yaml  production.yaml  quick_test.yaml
data/: balanced_dataset_config.json  balanced_weather_data.csv  data_loader.py  data_validation.py  feature_engineering.py  prepared_weather_data.csv  preprocessing.py  regulation_time_windows.csv
docs/: API_DOCUMENTATION.md  PRECOMMIT_SETUP.md
models/: __init__.py  attention_lstm.py  autoencoder.py  balanced_weather_regulation_model.pkl  base_model.py  cnn.py  ensemble.py  fnn.py  gru.py  hybrid_models.py  lstm.py  random_forest.py  rnn.py  transformer.py  wavenet.py
models/deep_learning/: additional_models_results.json  additional_models_scaler.pkl  attention_lstm_balanced_best.keras  attention_lstm_balanced_final.keras  cnn_balanced.pkl  comprehensive_results.json  fnn_balanced_best.keras  fnn_balanced_final.keras  gru_balanced_best.keras  gru_balanced_final.keras  lstm_balanced_config.json  lstm_balanced_final.keras  rnn_balanced_best.keras  rnn_balanced_final.keras  transformer_balanced_best.keras  transformer_balanced_final.keras
notebooks/: 01_Quick_Start_Tutorial.ipynb  02_Advanced_Deep_Learning.ipynb
results/: __init__.py  balanced_feature_importance.csv  report_generator.py  results_manager.py
scripts/: README.md  __init__.py
scripts/balanced_dataset/: __init__.py  analyze_and_balance_data.py  generate_all_visualizations.py  prepare_balanced_data.py  run_balanced_pipeline.py  train_additional_models.py  train_balanced_model.py  train_gru_transformer_balanced.py  train_lstm_balanced.py  train_remaining_models.py  train_transformer_fixed.py  visualize_dl_results.py
scripts/examples/: __init__.py  example_usage.py
scripts/legacy/: filter_TAFs.py  model.py
scripts/utilities/: __init__.py  check_cuda.py  prepare_real_data.py  run_simple_experiment.py  train_deep_learning_balanced.py  train_model_real_data.py
src/: __init__.py  config_parser.py  config_utils.py
tests/: test_config.py  test_data_pipeline.py  test_integration.py  test_models.py  test_performance.py  test_training_pipeline.py
training/: __init__.py  hyperparameter_tuning.py  trainer.py
visualization/: dashboard.py  plots.py
visualizations/deep_learning/: VISUAL_RESULTS_SUMMARY.md
visualizations/traditional_ml/: feature_importance.csv
