[project]
name = "tfm"
version = "0.1.0"
description = ""
authors = [
    {name = "Rubio",email = "100428611@alumnos.uc3m.es"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy",
    "pandas (>=2.2.3,<3.0.0)",
    "yellowbrick (>=1.5,<2.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "metafora (>=1.1.8,<2.0.0)",
    "pytaf (>=1.2.1,<2.0.0)",
    "keras (>=3.10.0,<4.0.0)",
    "python-metar (>=1.4.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "pyarrow (>=9.0.0,<21.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dask (>=2025.5.1,<2026.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "reportlab (>=4.4.1,<5.0.0)",
    "ray[tune] (>=2.46.0,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "dash (>=3.0.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
